[gd_scene load_steps=9 format=3 uid="uid://d2fxem1o4nt1d"]

[ext_resource type="PackedScene" uid="uid://ydts4ghsri2e" path="res://assets/glb/koerperscanner.glb" id="1_7odf3"]
[ext_resource type="Script" uid="uid://bj54bekfah8rv" path="res://scripts/kpscanner.gd" id="2_djs0q"]
[ext_resource type="PackedScene" uid="uid://nmqe2cjjkd3k" path="res://scenes/npc_airport_worker.tscn" id="3_00xkp"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_w66yt"]
data = PackedVector3Array(0.9108, -1, 1, -0.9108, -37.3182, 1, -0.9108, -1, 1, 0.9108, -1, 1, 0.9108, -37.3182, 1, -0.9108, -37.3182, 1, 1, 1, 0.9108, -1, 1, 0.823, 1, 1, 0.823, -1, 1, 0.823, -0.9932, 1, 0.945, -1, 1, 0.9108, -0.9932, 1, 0.945, -0.945, 1, 0.9932, -0.9739, 1, 0.9739, -0.945, 1, 0.9932, 0.9108, 1, 1, -0.9108, 1, 1, 0.9108, 1, 1, 0.9739, 1, 0.9739, 0.945, 1, 0.9932, 0.9739, 1, 0.9739, 1, 1, 0.9108, 0.9932, 1, 0.945, 1, 1, 0.9108, -0.9932, 1, 0.945, -1, 1, 0.823, -0.9932, 1, 0.945, 0.9108, 1, 1, -0.945, 1, 0.9932, 0.9108, 1, 1, 1, 1, 0.9108, 0.9739, 1, 0.9739, -0.9932, 1, 0.945, 1, 1, 0.9108, 0.9108, 1, 1, -1, -1, -0.8945, -1, -37.3182, -0.9108, -1, -1, -0.9108, -1, -1, -0.8945, -1, -37.3182, -0.8945, -1, -37.3182, -0.9108, -1, -1, 0.9108, -1, 1, 0.823, -1, 1, 0.9108, -1, 1, 0.823, -1, -1, 0.9122, -1, -0.9108, 0.823, -1, -1, 0.9108, -1, -1, 0.9122, -1, 1, 0.823, 0.9108, -1, 1, -0.9108, 1, 1, 0.9108, 1, 1, 0.9108, -1, 1, -0.9108, -1, 1, -0.9108, 1, 1, 1, 1, -0.8053, 0.9932, 1, -0.945, 1, 1, -0.9108, 0.9932, 1, -0.945, 0.945, 1, -0.9932, 0.9739, 1, -0.9739, 0.945, 1, -0.9932, -0.9108, 1, -1, 0.9108, 1, -1, -0.9108, 1, -1, -0.9739, 1, -0.9739, -0.945, 1, -0.9932, -0.9739, 1, -0.9739, -1, 1, -0.9108, -0.9932, 1, -0.945, -1, 1, -0.9108, 1, 1, -0.8053, -1, 1, -0.8053, 1, 1, -0.8053, 0.945, 1, -0.9932, 0.9932, 1, -0.945, 0.945, 1, -0.9932, -0.9739, 1, -0.9739, -0.9108, 1, -1, -0.9739, 1, -0.9739, 1, 1, -0.8053, -1, 1, -0.9108, 0.945, 1, -0.9932, 1, 1, -0.8053, -0.9739, 1, -0.9739, 0.9108, -1, -0.8053, -0.9108, -37.3182, -0.8053, -0.9108, -1, -0.8053, 0.9108, -1, -0.8053, 0.9108, -37.3182, -0.8053, -0.9108, -37.3182, -0.8053, -0.9108, -1, 0.823, 0.9108, -37.3182, 0.823, 0.9108, -1, 0.823, -0.9108, -1, 0.823, -0.9108, -37.3182, 0.823, 0.9108, -37.3182, 0.823, -1, -1, 0.9108, -1, -37.3182, 0.9122, -1, -1, 0.9122, -1, -1, 0.9108, -1, -37.3182, 0.9108, -1, -37.3182, 0.9122, 1, 1, -0.8053, -1, 1, 0.823, -1, 1, -0.8053, 1, 1, -0.8053, 1, 1, 0.823, -1, 1, 0.823, -0.9108, -1, -1, 0.9108, -37.3182, -1, 0.9108, -1, -1, -0.9108, -1, -1, -0.9108, -37.3182, -1, 0.9108, -37.3182, -1, -1, -1, -0.9108, -1, -0.9108, -0.8053, -1, -1, -0.8945, -1, -0.9108, -0.8053, -1, 1, -0.9108, -1, 1, -0.8053, -1, -0.9108, -0.8053, -1, -1, -0.9108, -1, 1, -0.9108, -0.9108, -1, -1, 0.9108, 1, -1, -0.9108, 1, -1, -0.9108, -1, -1, 0.9108, -1, -1, 0.9108, 1, -1, -1, -1, 0.7338, -0.9108, -1, -0.8053, -1, -1, -0.7161, -0.9108, -1, -0.8053, 1, -1, -0.7161, 0.9108, -1, -0.8053, 1, -1, -0.7161, 0.9108, -1, 0.823, 1, -1, 0.7338, 0.9108, -1, 0.823, -1, -1, 0.7338, -0.9108, -1, 0.823, -1, -1, 0.7338, 1, -1, -0.7161, -0.9108, -1, -0.8053, 1, -1, -0.7161, -1, -1, 0.7338, 0.9108, -1, 0.823, -1, -37.3182, -0.8945, -0.9932, -37.3182, -0.945, -1, -37.3182, -0.9108, -0.9932, -37.3182, -0.945, -0.945, -37.3182, -0.9932, -0.9739, -37.3182, -0.9739, -0.945, -37.3182, -0.9932, 0.9108, -37.3182, -1, -0.9108, -37.3182, -1, 0.9108, -37.3182, -1, 0.9739, -37.3182, -0.9739, 0.945, -37.3182, -0.9932, 0.9739, -37.3182, -0.9739, 1, -37.3182, -0.9108, 0.9932, -37.3182, -0.945, 1, -37.3182, -0.9108, 0.9932, -37.3182, -0.8604, 1, -37.3182, -0.8945, 0.9932, -37.3182, -0.8604, 0.945, -37.3182, -0.8121, 0.9739, -37.3182, -0.8314, 0.945, -37.3182, -0.8121, -0.9108, -37.3182, -0.8053, 0.9108, -37.3182, -0.8053, -0.9108, -37.3182, -0.8053, -0.9739, -37.3182, -0.8314, -0.945, -37.3182, -0.8121, -0.9739, -37.3182, -0.8314, -1, -37.3182, -0.8945, -0.9932, -37.3182, -0.8604, -1, -37.3182, -0.8945, -0.945, -37.3182, -0.9932, -0.9932, -37.3182, -0.945, -0.945, -37.3182, -0.9932, 0.9739, -37.3182, -0.9739, 0.9108, -37.3182, -1, 0.9739, -37.3182, -0.9739, 0.9932, -37.3182, -0.8604, 1, -37.3182, -0.9108, 0.9932, -37.3182, -0.8604, -0.9108, -37.3182, -0.8053, 0.945, -37.3182, -0.8121, -0.9108, -37.3182, -0.8053, -1, -37.3182, -0.8945, -0.9739, -37.3182, -0.8314, -1, -37.3182, -0.8945, 0.9739, -37.3182, -0.9739, -0.945, -37.3182, -0.9932, 0.9739, -37.3182, -0.9739, -0.9108, -37.3182, -0.8053, 0.9932, -37.3182, -0.8604, 0.9739, -37.3182, -0.9739, -1, -37.3182, -0.8945, -0.9108, -37.3182, -0.8053, -1, -1, -0.7161, -1, -0.9108, 0.823, -1, -1, 0.7338, -1, -0.9108, 0.823, -1, 1, -0.8053, -1, 1, 0.823, -1, 1, -0.8053, -1, -1, -0.7161, -1, -0.9108, -0.8053, -1, -0.9108, 0.823, -1, -1, -0.7161, -1, 1, -0.8053, 1, -1, 0.9122, 1, 1, 0.823, 1, -0.9108, 0.823, 1, 1, 0.823, 1, -1, 0.9108, 1, 1, 0.9108, 1, -1, 0.9122, 1, -1, 0.9108, 1, 1, 0.823, -1, -37.3182, 0.9122, -0.9739, -37.3182, 0.8491, -0.9932, -37.3182, 0.8781, -0.9739, -37.3182, 0.8491, -0.9108, -37.3182, 0.823, -0.945, -37.3182, 0.8298, -0.9108, -37.3182, 0.823, 0.945, -37.3182, 0.8298, 0.9108, -37.3182, 0.823, 0.945, -37.3182, 0.8298, 0.9932, -37.3182, 0.8781, 0.9739, -37.3182, 0.8491, 0.945, -37.3182, 0.8298, 1, -37.3182, 0.9122, 0.9932, -37.3182, 0.8781, -0.9739, -37.3182, 0.8491, 0.945, -37.3182, 0.8298, -0.9108, -37.3182, 0.823, -1, -37.3182, 0.9122, 0.945, -37.3182, 0.8298, -0.9739, -37.3182, 0.8491, -1, -37.3182, 0.9122, 1, -37.3182, 0.9122, 0.945, -37.3182, 0.8298, -0.9739, -37.3182, 0.9739, -1, -37.3182, 0.9108, -0.9932, -37.3182, 0.945, -0.945, -37.3182, 0.9932, -1, -37.3182, 0.9108, -0.9739, -37.3182, 0.9739, 0.9108, -37.3182, 1, -0.945, -37.3182, 0.9932, -0.9108, -37.3182, 1, 0.9739, -37.3182, 0.9739, 0.9108, -37.3182, 1, 0.945, -37.3182, 0.9932, 1, -37.3182, 0.9108, 0.9739, -37.3182, 0.9739, 0.9932, -37.3182, 0.945, 1, -37.3182, 0.9108, 0.9108, -37.3182, 1, 0.9739, -37.3182, 0.9739, 0.9108, -37.3182, 1, -1, -37.3182, 0.9108, -0.945, -37.3182, 0.9932, 1, -37.3182, 0.9108, -1, -37.3182, 0.9108, 0.9108, -37.3182, 1, -1, -37.3182, 0.9108, 1, -37.3182, 0.9122, -1, -37.3182, 0.9122, 1, -37.3182, 0.9122, -1, -37.3182, 0.9108, 1, -37.3182, 0.9108, 1, -1, -0.9108, 1, -37.3182, -0.8945, 1, -1, -0.8945, 1, -1, -0.9108, 1, -37.3182, -0.9108, 1, -37.3182, -0.8945, 1, -1, 0.9122, 1, -37.3182, 0.9108, 1, -1, 0.9108, 1, -1, 0.9122, 1, -37.3182, 0.9122, 1, -37.3182, 0.9108, 1, -1, 0.7338, 1, -0.9108, -0.8053, 1, -1, -0.7161, 1, -0.9108, -0.8053, 1, 1, 0.823, 1, 1, -0.8053, 1, 1, 0.823, 1, -1, 0.7338, 1, -0.9108, 0.823, 1, -0.9108, -0.8053, 1, -1, 0.7338, 1, 1, 0.823, -1, -1, 0.7338, -0.945, -1, 0.8298, -0.9108, -1, 0.823, -1, -1, 0.7338, -0.9739, -1, 0.8491, -0.945, -1, 0.8298, -1, -1, 0.9122, -1, -1, 0.7338, -1, -0.9108, 0.823, -1, -1, 0.7338, -0.9932, -1, 0.8781, -0.9739, -1, 0.8491, -0.9932, -1, 0.8781, -1, -1, 0.7338, -1, -1, 0.9122, 1, -0.9108, 0.823, 0.9932, -1, 0.8781, 1, -1, 0.9122, 1, -0.9108, 0.823, 0.9739, -1, 0.8491, 0.9932, -1, 0.8781, 0.9108, -1, 0.823, 1, -0.9108, 0.823, 1, -1, 0.7338, 1, -0.9108, 0.823, 0.945, -1, 0.8298, 0.9739, -1, 0.8491, 0.945, -1, 0.8298, 1, -0.9108, 0.823, 0.9108, -1, 0.823, 1, -1, -0.7161, 0.945, -1, -0.8121, 0.9108, -1, -0.8053, 1, -1, -0.7161, 0.9739, -1, -0.8314, 0.945, -1, -0.8121, 1, -1, -0.8945, 1, -1, -0.7161, 1, -0.9108, -0.8053, 1, -1, -0.7161, 0.9932, -1, -0.8604, 0.9739, -1, -0.8314, 0.9932, -1, -0.8604, 1, -1, -0.7161, 1, -1, -0.8945, -1, -0.9108, -0.8053, -0.9932, -1, -0.8604, -1, -1, -0.8945, -1, -0.9108, -0.8053, -0.9739, -1, -0.8314, -0.9932, -1, -0.8604, -0.9108, -1, -0.8053, -1, -0.9108, -0.8053, -1, -1, -0.7161, -1, -0.9108, -0.8053, -0.945, -1, -0.8121, -0.9739, -1, -0.8314, -0.945, -1, -0.8121, -1, -0.9108, -0.8053, -0.9108, -1, -0.8053, 1, 1, -0.9108, 0.9932, -1, -0.945, 1, -1, -0.9108, 1, 1, -0.9108, 0.9932, 1, -0.945, 0.9932, -1, -0.945, 0.9932, 1, -0.945, 0.9739, -1, -0.9739, 0.9932, -1, -0.945, 0.9932, 1, -0.945, 0.9739, 1, -0.9739, 0.9739, -1, -0.9739, 0.9739, 1, -0.9739, 0.945, -1, -0.9932, 0.9739, -1, -0.9739, 0.9739, 1, -0.9739, 0.945, 1, -0.9932, 0.945, -1, -0.9932, 0.945, 1, -0.9932, 0.9108, -1, -1, 0.945, -1, -0.9932, 0.945, 1, -0.9932, 0.9108, 1, -1, 0.9108, -1, -1, -0.9108, -1, 1, -0.945, 1, 0.9932, -0.9108, 1, 1, -0.9108, -1, 1, -0.945, -1, 0.9932, -0.945, 1, 0.9932, -0.945, -1, 0.9932, -0.9739, 1, 0.9739, -0.945, 1, 0.9932, -0.945, -1, 0.9932, -0.9739, -1, 0.9739, -0.9739, 1, 0.9739, -0.9739, -1, 0.9739, -0.9932, 1, 0.945, -0.9739, 1, 0.9739, -0.9739, -1, 0.9739, -0.9932, -1, 0.945, -0.9932, 1, 0.945, -0.9932, -1, 0.945, -1, 1, 0.9108, -0.9932, 1, 0.945, -0.9932, -1, 0.945, -1, -1, 0.9108, -1, 1, 0.9108, 0.9108, 1, 1, 0.945, -1, 0.9932, 0.9108, -1, 1, 0.9108, 1, 1, 0.945, 1, 0.9932, 0.945, -1, 0.9932, 0.945, 1, 0.9932, 0.9739, -1, 0.9739, 0.945, -1, 0.9932, 0.945, 1, 0.9932, 0.9739, 1, 0.9739, 0.9739, -1, 0.9739, 0.9739, 1, 0.9739, 0.9932, -1, 0.945, 0.9739, -1, 0.9739, 0.9739, 1, 0.9739, 0.9932, 1, 0.945, 0.9932, -1, 0.945, 0.9932, 1, 0.945, 1, -1, 0.9108, 0.9932, -1, 0.945, 0.9932, 1, 0.945, 1, 1, 0.9108, 1, -1, 0.9108, -0.9108, 1, -1, -0.945, -1, -0.9932, -0.9108, -1, -1, -0.9108, 1, -1, -0.945, 1, -0.9932, -0.945, -1, -0.9932, -0.945, 1, -0.9932, -0.9739, -1, -0.9739, -0.945, -1, -0.9932, -0.945, 1, -0.9932, -0.9739, 1, -0.9739, -0.9739, -1, -0.9739, -0.9739, 1, -0.9739, -0.9932, -1, -0.945, -0.9739, -1, -0.9739, -0.9739, 1, -0.9739, -0.9932, 1, -0.945, -0.9932, -1, -0.945, -0.9932, 1, -0.945, -1, -1, -0.9108, -0.9932, -1, -0.945, -0.9932, 1, -0.945, -1, 1, -0.9108, -1, -1, -0.9108, 0.9108, -1, 1, 0.945, -37.3182, 0.9932, 0.9108, -37.3182, 1, 0.9108, -1, 1, 0.945, -1, 0.9932, 0.945, -37.3182, 0.9932, 0.945, -1, 0.9932, 0.9739, -37.3182, 0.9739, 0.945, -37.3182, 0.9932, 0.945, -1, 0.9932, 0.9739, -1, 0.9739, 0.9739, -37.3182, 0.9739, 0.9739, -1, 0.9739, 0.9932, -37.3182, 0.945, 0.9739, -37.3182, 0.9739, 0.9739, -1, 0.9739, 0.9932, -1, 0.945, 0.9932, -37.3182, 0.945, 0.9932, -1, 0.945, 1, -37.3182, 0.9108, 0.9932, -37.3182, 0.945, 0.9932, -1, 0.945, 1, -1, 0.9108, 1, -37.3182, 0.9108, 0.9108, -37.3182, 0.823, 0.945, -1, 0.8298, 0.9108, -1, 0.823, 0.9108, -37.3182, 0.823, 0.945, -37.3182, 0.8298, 0.945, -1, 0.8298, 0.945, -37.3182, 0.8298, 0.9739, -1, 0.8491, 0.945, -1, 0.8298, 0.945, -37.3182, 0.8298, 0.9739, -37.3182, 0.8491, 0.9739, -1, 0.8491, 0.9739, -37.3182, 0.8491, 0.9932, -1, 0.8781, 0.9739, -1, 0.8491, 0.9739, -37.3182, 0.8491, 0.9932, -37.3182, 0.8781, 0.9932, -1, 0.8781, 0.9932, -37.3182, 0.8781, 1, -1, 0.9122, 0.9932, -1, 0.8781, 0.9932, -37.3182, 0.8781, 1, -37.3182, 0.9122, 1, -1, 0.9122, -0.9108, -1, -1, -0.945, -37.3182, -0.9932, -0.9108, -37.3182, -1, -0.9108, -1, -1, -0.945, -1, -0.9932, -0.945, -37.3182, -0.9932, -0.945, -1, -0.9932, -0.9739, -37.3182, -0.9739, -0.945, -37.3182, -0.9932, -0.945, -1, -0.9932, -0.9739, -1, -0.9739, -0.9739, -37.3182, -0.9739, -0.9739, -1, -0.9739, -0.9932, -37.3182, -0.945, -0.9739, -37.3182, -0.9739, -0.9739, -1, -0.9739, -0.9932, -1, -0.945, -0.9932, -37.3182, -0.945, -0.9932, -1, -0.945, -1, -37.3182, -0.9108, -0.9932, -37.3182, -0.945, -0.9932, -1, -0.945, -1, -1, -0.9108, -1, -37.3182, -0.9108, -0.9108, -37.3182, -0.8053, -0.945, -1, -0.8121, -0.9108, -1, -0.8053, -0.9108, -37.3182, -0.8053, -0.945, -37.3182, -0.8121, -0.945, -1, -0.8121, -0.945, -37.3182, -0.8121, -0.9739, -1, -0.8314, -0.945, -1, -0.8121, -0.945, -37.3182, -0.8121, -0.9739, -37.3182, -0.8314, -0.9739, -1, -0.8314, -0.9739, -37.3182, -0.8314, -0.9932, -1, -0.8604, -0.9739, -1, -0.8314, -0.9739, -37.3182, -0.8314, -0.9932, -37.3182, -0.8604, -0.9932, -1, -0.8604, -0.9932, -37.3182, -0.8604, -1, -1, -0.8945, -0.9932, -1, -0.8604, -0.9932, -37.3182, -0.8604, -1, -37.3182, -0.8945, -1, -1, -0.8945, -0.9108, -1, 0.823, -0.945, -37.3182, 0.8298, -0.9108, -37.3182, 0.823, -0.9108, -1, 0.823, -0.945, -1, 0.8298, -0.945, -37.3182, 0.8298, -0.945, -1, 0.8298, -0.9739, -37.3182, 0.8491, -0.945, -37.3182, 0.8298, -0.945, -1, 0.8298, -0.9739, -1, 0.8491, -0.9739, -37.3182, 0.8491, -0.9739, -1, 0.8491, -0.9932, -37.3182, 0.8781, -0.9739, -37.3182, 0.8491, -0.9739, -1, 0.8491, -0.9932, -1, 0.8781, -0.9932, -37.3182, 0.8781, -0.9932, -1, 0.8781, -1, -37.3182, 0.9122, -0.9932, -37.3182, 0.8781, -0.9932, -1, 0.8781, -1, -1, 0.9122, -1, -37.3182, 0.9122, -0.9108, -37.3182, 1, -0.945, -1, 0.9932, -0.9108, -1, 1, -0.9108, -37.3182, 1, -0.945, -37.3182, 0.9932, -0.945, -1, 0.9932, -0.945, -37.3182, 0.9932, -0.9739, -1, 0.9739, -0.945, -1, 0.9932, -0.945, -37.3182, 0.9932, -0.9739, -37.3182, 0.9739, -0.9739, -1, 0.9739, -0.9739, -37.3182, 0.9739, -0.9932, -1, 0.945, -0.9739, -1, 0.9739, -0.9739, -37.3182, 0.9739, -0.9932, -37.3182, 0.945, -0.9932, -1, 0.945, -0.9932, -37.3182, 0.945, -1, -1, 0.9108, -0.9932, -1, 0.945, -0.9932, -37.3182, 0.945, -1, -37.3182, 0.9108, -1, -1, 0.9108, 0.9108, -1, -0.8053, 0.945, -37.3182, -0.8121, 0.9108, -37.3182, -0.8053, 0.9108, -1, -0.8053, 0.945, -1, -0.8121, 0.945, -37.3182, -0.8121, 0.945, -1, -0.8121, 0.9739, -37.3182, -0.8314, 0.945, -37.3182, -0.8121, 0.945, -1, -0.8121, 0.9739, -1, -0.8314, 0.9739, -37.3182, -0.8314, 0.9739, -1, -0.8314, 0.9932, -37.3182, -0.8604, 0.9739, -37.3182, -0.8314, 0.9739, -1, -0.8314, 0.9932, -1, -0.8604, 0.9932, -37.3182, -0.8604, 0.9932, -1, -0.8604, 1, -37.3182, -0.8945, 0.9932, -37.3182, -0.8604, 0.9932, -1, -0.8604, 1, -1, -0.8945, 1, -37.3182, -0.8945, 0.9108, -37.3182, -1, 0.945, -1, -0.9932, 0.9108, -1, -1, 0.9108, -37.3182, -1, 0.945, -37.3182, -0.9932, 0.945, -1, -0.9932, 0.945, -37.3182, -0.9932, 0.9739, -1, -0.9739, 0.945, -1, -0.9932, 0.945, -37.3182, -0.9932, 0.9739, -37.3182, -0.9739, 0.9739, -1, -0.9739, 0.9739, -37.3182, -0.9739, 0.9932, -1, -0.945, 0.9739, -1, -0.9739, 0.9739, -37.3182, -0.9739, 0.9932, -37.3182, -0.945, 0.9932, -1, -0.945, 0.9932, -37.3182, -0.945, 1, -1, -0.9108, 0.9932, -1, -0.945, 0.9932, -37.3182, -0.945, 1, -37.3182, -0.9108, 1, -1, -0.9108, 1, -1, -0.8945, 1, 1, -0.9108, 1, -1, -0.9108, 1, 1, -0.9108, 1, -0.9108, -0.8053, 1, 1, -0.8053, 1, 1, -0.9108, 1, -1, -0.8945, 1, -0.9108, -0.8053)

[sub_resource type="BoxShape3D" id="BoxShape3D_a66mf"]
size = Vector3(0.0981445, 18.2595, 0.794556)

[sub_resource type="PlaneMesh" id="PlaneMesh_iad0i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yli86"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yw2lb"]
size = Vector3(12.8517, 33.7705, 7.76715)

[node name="koerperscanner" instance=ExtResource("1_7odf3")]

[node name="Cube" parent="." index="0"]
transform = Transform3D(0.5, 0, 0, 0, 0.067, 0, 0, 0, 0.693, 0, 2.5, 0)
script = ExtResource("2_djs0q")

[node name="StaticBody3D" type="StaticBody3D" parent="Cube" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_w66yt")

[node name="Area3D" type="Area3D" parent="Cube" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/Area3D" index="0"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.0718, -18.715, -0.00972451)
shape = SubResource("BoxShape3D_a66mf")

[node name="indicator" type="MeshInstance3D" parent="Cube" index="2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 0.5, -1.01617, -0.00726318, -0.0277569)
mesh = SubResource("PlaneMesh_iad0i")
surface_material_override/0 = SubResource("StandardMaterial3D_yli86")

[node name="indicator2" type="MeshInstance3D" parent="Cube" index="3"]
transform = Transform3D(4.37114e-08, 1, -4.37114e-08, 1, -4.37114e-08, 0, -3.82137e-15, -8.74228e-08, -0.5, 1.00018, 0, 0)
mesh = SubResource("PlaneMesh_iad0i")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_yli86")

[node name="Area3D2" type="Area3D" parent="Cube" index="4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cube/Area3D2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51084, -16.3852, -0.0758362)
shape = SubResource("BoxShape3D_yw2lb")

[node name="npc_airport_worker" parent="." index="1" instance=ExtResource("3_00xkp")]
transform = Transform3D(-0.8109, 0, -0.585184, 0, 1, 0, 0.585184, 0, -0.8109, 2.05438, 0, 2.30366)

[connection signal="body_entered" from="Cube/Area3D2" to="Cube" method="_on_area_3d_2_body_entered"]
[connection signal="body_exited" from="Cube/Area3D2" to="Cube" method="_on_area_3d_2_body_exited"]
